<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">
    <LinearLayout
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/git_ssh_generate_keys_tip"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginTop="20dp"
            android:text="@string/git_ssh_generate_keys_step_1"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginTop="8dp"
            android:id="@+id/tvKey"
            android:textColor="@color/black"
            android:background="@color/lightgray"
            android:textSize="12sp"
            android:padding="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:layout_marginTop="16dp"
            android:id="@+id/btnCopyKey"
            android:text="@string/copy_key"
            style="@style/ThemeBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <Button
            android:layout_marginTop="16dp"
            android:id="@+id/btnGenKey"
            android:text="@string/regenerate_key"
            style="@style/ThemeBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginTop="16dp"
            android:text="@string/git_ssh_generate_keys_step_2"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginTop="16dp"
            android:text="@string/git_ssh_generate_keys_step_3"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <Button
            android:layout_marginTop="16dp"
            android:id="@+id/btnClone"
            android:text="@string/clone_repo"
            style="@style/ThemeBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</ScrollView>

