<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_rename" android:title="@string/rename"
        android:icon="@drawable/ic_note_rename"
        android:showAsAction="always"
        app:showAsAction="always"
        tools:ignore="AppCompatResource" />
    <item android:id="@+id/action_lock" android:title="@string/encrypt_folder"
        android:icon="@drawable/outline_lock_white_24"
        android:showAsAction="always"
        app:showAsAction="always"
        tools:ignore="AppCompatResource" />
    <item android:id="@+id/action_unlock" android:title="@string/encrypt_folder"
        android:icon="@drawable/outline_lock_open_white_24"
        android:showAsAction="always"
        app:showAsAction="always"
        tools:ignore="AppCompatResource" />
    <item android:id="@+id/action_delete" android:title="@string/delete"
        android:icon="@drawable/outline_delete_white_24"
        android:showAsAction="always"
        app:showAsAction="always"
        tools:ignore="AppCompatResource" />
    <item android:id="@+id/action_select_all" android:title="@android:string/selectAll"
        android:icon="@drawable/outline_checklist_white_24"
        android:showAsAction="always"
        app:showAsAction="always"
        tools:ignore="AppCompatResource" />
    <item android:id="@+id/action_move" android:title="@string/move"
        android:icon="@drawable/outline_content_cut_white_24"
        android:showAsAction="always"
        app:showAsAction="always"
        tools:ignore="AppCompatResource" />
</menu>