<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/white"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/git_ssh_we_need_ssh_keys"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_marginTop="16dp"
        android:id="@+id/btnGenNewKeys"
        android:text="@string/git_ssh_generate_new_keys"
        style="@style/ThemeBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <Button
        android:layout_marginTop="16dp"
        android:id="@+id/btnProvideKeys"
        android:text="@string/git_ssh_provide_custom_keys"
        style="@style/ThemeBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>