<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editPubKey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/public_key"
            app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:gravity="top"
                android:minLines="8"
                android:textColor="@color/black"
                android:background="@color/lightgray"
                android:textSize="12sp"
                android:padding="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:layout_marginTop="16dp"
            android:id="@+id/btnLoadPuk"
            android:text="@string/or_load_public_key_file"
            style="@style/ThemeBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <View
            android:layout_marginTop="10dp"
            android:background="@color/lightgray"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"/>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editPriKey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/private_key"
            app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:gravity="top"
                android:minLines="8"
                android:textColor="@color/black"
                android:background="@color/lightgray"
                android:textSize="12sp"
                android:padding="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:layout_marginTop="16dp"
            android:id="@+id/btnLoadPrk"
            android:text="@string/or_load_private_key_file"
            style="@style/ThemeBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <View
            android:layout_marginTop="10dp"
            android:background="@color/lightgray"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"/>

        <Button
            android:layout_marginTop="16dp"
            android:id="@+id/btnClone"
            android:text="@string/clone_repo"
            style="@style/ThemeBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</ScrollView>

