<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    android:paddingRight="?dialogPreferredPadding"
    android:paddingLeft="?dialogPreferredPadding">



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        app:hintEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:gravity="top"
            android:lines="1"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/time"
        app:hintEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:gravity="top"
            android:lines="1"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:inputType="datetime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editMoney"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/money"
        app:hintEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:gravity="top"
            android:lines="1"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>
